--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,9 @@
 @import "tailwindcss";
+@import "@fontsource-variable/open-sans";
+@import "@fontsource/poppins/400";
+@import "@fontsource/poppins/500";
+@import "@fontsource/poppins/600";
+@import "@fontsource/open-sauce-sans";
 
 :root {
   --background: #ffffff;
@@ -8,8 +13,11 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+
+  --font-opensans: "Open Sans Variable", system-ui, sans-serif;
+  --font-poppins: "poppins", system-ui, sans-serif;
+  --font-saucesans: "Open Sauce Sans", system-ui, sans-serif;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,8 +27,110 @@
   }
 }
 
+@layer base {
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type="number"] {
+    -moz-appearance: textfield; /* For Firefox */
+    appearance: textfield; /* For other browsers */
+  }
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans Variable', Arial, Helvetica, sans-serif; /*main font here*/
 }
+
+/* Remove Ant default blue focus for ant table input row */
+.ant-input:focus,
+.ant-input-focused {
+  border-color: #597F40 !important;   /* your green color */
+  box-shadow: none !important;        /* remove glow */
+  box-shadow: inset 0 0 0 1px #597F40 !important; /* to make inner border */
+}
+
+/* override styling for ant dropdown */
+.ant-dropdown-menu-item { 
+  background-color: white;
+  color: #191413;
+  font-family: 'Open Sauce Sans', system-ui, sans-serif;
+  align-items: baseline;
+  height:auto;
+}
+.ant-dropdown-menu-item:hover { /*override styling for ant dropdown hovering*/
+  background-color: #F0F4EF !important;
+  color: #191413;
+}
+
+/* Override Ant Design Pagination Colors */
+
+/* Active page number */
+.ant-pagination-item-active {
+  border-color: #597F40 !important; /* green border */
+}
+
+.ant-pagination-item-active a {
+  color: #597F40 !important;        /* green text */
+}
+
+/* On hover */
+.ant-pagination-item:hover {
+  border-color: #597F40 !important;
+}
+
+.ant-pagination-item:hover a {
+  color: #597F40 !important;
+  background-color: #F0F4EF;
+}
+
+/* Focus outline */
+.ant-pagination-item:focus-visible,
+.ant-pagination-prev:focus-visible,
+.ant-pagination-next:focus-visible {
+  outline: 2px solid #597F40 !important; 
+  outline-offset: 2px !important;
+}
+
+/* Prev / Next arrows on hover */
+.ant-pagination-prev:hover .anticon,
+.ant-pagination-next:hover .anticon {
+  color: #597F40 !important;
+}
+
+/*invoice A4 paper*/
+.invoice-A4-paper {
+  width: 794px;
+  min-height: 1123px;
+  background: white;
+  font-family: Arial, Helvetica, sans-serif;
+
+  margin: 0px ;
+  padding: 40px;
+
+  box-sizing: border-box;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
+}
+
+@media print {
+  @page {
+    size: A4;
+    margin: 0;
+  }
+
+  body {
+    margin: 0;
+  }
+
+  .invoice-A4-paper {
+    width: 794px;
+    margin: 0;
+    box-shadow: none;
+  }
+}
+
+
